fix: action bar list should be left aligned

--- a/src/templates/actionBar.scss
+++ b/src/templates/actionBar.scss
@@ -98,7 +98,6 @@ $backwards-step4-duration: $standard-fifth-timing;
     &.action_bar--list {
         align-items: center;
         display: flex;
-        justify-content: center;
     }
     .action_bar--list_item {
         align-items: center;
